# ASPRIN

./: .gitignore  Makefile.in  README.md  configure  configure.ac  setup.py
asprin_snps/: HepG2_asprin_snps.tsv  K562_asprin_snps.tsv
example/: HepG2_test_variants.vcf  HepG2_total_rnaseq_test.bam  HepG2_total_rnaseq_test.bam.bai  RBFOX2_HepG2_clip_test.bam  RBFOX2_HepG2_clip_test.bam.bai  dbsnp_test.vcf  output_all.txt  output_all_labeled.txt  output_editing.txt  output_snps.txt  output_snps_and_editting.txt  radar_test.txt
src/asprin/scripts/: asprin.py  coverage.py  find_SNP_region.py  genotype.py  model.py
